# Interview_Prep

AMD_Interview/: AI under the hood.md  C++.canvas  Coding problem patterns.canvas  Design Principles.canvas  Detect a crash using memory details.md  TODO.canvas
AMD_Interview/.obsidian/: workspace.json
c++/IPC/code/: CMakeLists.txt  main.cpp
c++/IPC/notes/: IPC_message_passing.md  IPC_shared_memory.md
c++/Thread_Pooling/: main.cpp
c++/atomic/: main.cpp
design_principles/Singleton_pattern/: a.out  main.cpp  singleton.cpp  singleton.h
design_principles/abstract_factory/: abstract.drawio  abstract_build.hpp  components.hpp  notes.md
design_principles/observer_pattern/: a.out  class_diagram.drawio  main.cpp  message.h  observer.h  subject.h  subject.hpp
design_principles/strategy_pattern/: strategy.drawio
